[package]
name = "uast"
version = "4.0.3"
edition = "2021"
rust-version = "1.74.0"
description = "Unicode Aware Saṃskṛta Transliteration in Rust 🦀"
license = "Apache-2.0"
authors = ["Dhruvil Dave"]
repository = "https://github.com/dhruvildave/uast.rs"
readme = "README.md"
include = ["src/"]
homepage = "https://uast.dev"
categories = ["text-processing", "command-line-utilities", "parser-implementations", "encoding"]

[profile.release]
strip = true
lto = true
