[package]
name = "uast"
version = "5.0.0"
edition = "2021"
rust-version = "1.84.0"
description = "Unicode Aware Saṃskṛta Transliteration in Rust 🦀"
license = "Apache-2.0"
authors = ["Dhruvil Dave"]
repository = "https://github.com/dhruvildave/uast.rs"
include = ["src/"]
homepage = "https://uast.dev"
categories = [
    "text-processing",
    "command-line-utilities",
    "parser-implementations",
    "encoding",
]
resolver = "3"

[profile.release]
strip = true
lto = true
