[package]
name = "uast"
version = "6.0.6"
edition = "2024"
rust-version = "1.91.1"
description = "Unicode Aware Saṃskṛta Transliteration in Rust 🦀"
license = "Apache-2.0"
authors = ["Dhruvil Dave"]
repository = "https://github.com/dhruvildave/uast.rs"
include = ["src/"]
homepage = "https://uast.dev"
categories = [
    "text-processing",
    "command-line-utilities",
    "parser-implementations",
    "encoding",
]

[profile.release]
strip = true
lto = true
